add_subdirectory(fs)
add_subdirectory(util)

# add_executable(alloc_test alloc_test.cpp)
# add_executable(slice_test slice_test.cpp)
# add_executable(ref_count_test ref_count_test.cpp)
# add_executable(format_test format_test.cpp)

# set_target_properties(boltdb PROPERTIES LINKER_LANGUAGE CXX)
# target_link_libraries(slice_test boltdb)
# target_link_libraries(ref_count_test boltdb)
