function(add_test_program program_name)
    set(source_files ${program_name}.cpp)
    add_executable(${program_name} ${source_files})
    target_link_libraries(${program_name} PRIVATE gtest boltdb)
endfunction()

add_test_program(options_test)
add_test_program(alloc_test)
add_test_program(slice_test)
add_test_program(ref_count_test)
add_test_program(format_test)
add_test_program(crc64_test)
add_test_program(binary_test)
add_test_program(irange_test)